--- a/styles/main.css
+++ b/styles/main.css
@@ -25,6 +25,7 @@ div{
 	margin: 7px 4px;
 }
 
+
 .results {
 	border: 1px solid white;
 	width: 500px;
@@ -36,8 +37,7 @@ div{
 	width : 100px;
 }
 
-
-
-.term, .trans {
-	
+button[name="convert"] {
+	display: block;
 }
+
