--- a/styles/main.css
+++ b/styles/main.css
@@ -1,17 +1,26 @@
 * {
 	box-sizing: border-box;
-
 }
 
 body {
 	background-color: #444444;
 	color: white;
 	font-size: 25px;
-		
+	margin: ;	
 }
 
 .container {
-	
+	margin: 0;
+}
+
+header {
+	background-color: #666666;
+	padding: 5px;
+}
+
+header h1 {
+	margin-left: 15px;
+	font-size: 35px;
 }
 
 .module {
@@ -23,9 +32,6 @@ body {
 	width : 100px;
 }
 
-label {
-	display: block;
-}
 
 button {
     background-color: #4CAF50; 
@@ -36,15 +42,37 @@ button {
     display: inline-block;
     border-radius: 3px;
     width: 75px;
+    font-size: 20px;
     /*font-size: 16px;*/
 }
+/*Search Module*/
 
-input {
-	margin-top: 5px;
+label {
+	display: block;
+	font-size: 30px;
+}
+
+input[type="image"] {
+	height: 50px;
+	display: inline-block;
+	position: absolute;
+	bottom: 0;
+	margin-left: 5px;
+}
+
+input[type="text"]{
+	margin-top: 10px;
 	width: 75%;
 	padding: 10px;
 	border-radius: 3px;
+	height: 50px;
 }
+
+.searchContainer {
+ position: relative;
+ margin-top: 5px;
+}
+
 
 /*Results Module*/
 
@@ -54,6 +82,7 @@ input {
 	margin-top: 20px;
 	padding: 10px;
 	position: relative;
+	font-size: 40px;
 }
 
 .results div {
@@ -73,14 +102,14 @@ input {
 }
 
 .def {
-	font-size: .75em;	
+	font-size: 13px;	
 }
 
 button[name="addTerm"] {
 	position: absolute;
-	width: 75px;
+	width: 100px;
 	left: 100%;
-	margin-left: -85px;
+	margin-left: -110px;
 }
 
 /*List Module*/
@@ -105,16 +134,16 @@ button[name="addTerm"] {
 
 button[name="removeTerm"] {
 	position: absolute;
-	width: 100px;
+	width: 125px;
 	left: 100%;
-	margin-left: -110px;
+	margin-left: -135px;
 }
 
 button[name="convert"] {
 	position: absolute;
-	width: 120px;
+	width: 135px;
 	left: 100%;
-	margin-left: -125px;
+	margin-left: -145px;
 	margin-top: 10px;
 
 }
@@ -123,10 +152,10 @@ button[name="convert"] {
 
 
 
-
+/*
 @media only screen and (min-width: 640px) {
 	.container {
 		margin-left: 15%;
 		margin-right: 15%;
 	}	
-}
+}*/
