--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@ header {
 }
 
 header h1 {
-	margin-left: 15px;
+	margin-left: -25px;
 	font-size: 35px;
 }
 
@@ -70,6 +70,11 @@ input[type="text"]{
  margin-top: 5px;
 }
 
+.error {
+	margin-top: 10px;
+	font-size: 17px;
+}
+
 
 /*Results Module*/
 
@@ -92,10 +97,9 @@ input[type="text"]{
 }
 
 .term, .trans {
-	border: 1px solid white;
-	padding-top: 0px;
 	vertical-align: bottom;
 	height: 40px;
+	width: 150px;
 }
 
 .def {
@@ -149,7 +153,19 @@ button[name="convert"] {
 
 /*Text Area*/
 
+.textAreaContainer {
+	margin-top: 80px;
+	width: 421px;
+}
 
+textarea {
+	margin-top: 5px;
+	font-size: 15px;
+}
+.instructions {
+	font-size: 17px;
+	width: 421px;
+}
 
 
 @media only screen and (min-width: 640px) {
